--- a/src/App.css
+++ b/src/App.css
@@ -1,107 +1,291 @@
-/* CSS HEX
---orchid-crayola: #f397d6ff;
---tart-orange: #ff4134ff;
---dark-sienna: #280003ff;
---chrome-yellow: #ffaa00ff;
---nyanza: #d0e3ccff;
---rich-black-fogra-39: #080708ff;
-
- CSS HSL
---orchid-crayola: hsla(319, 79%, 77%, 1);
---tart-orange: hsla(4, 100%, 60%, 1);
---dark-sienna: hsla(356, 100%, 8%, 1);
---chrome-yellow: hsla(40, 100%, 50%, 1);
---nyanza: hsla(110, 29%, 85%, 1);
---rich-black-fogra-39: hsla(300, 7%, 3%, 1);
+    /* CSS HEX
+--english-vermillion: #d64e4eff;
+--bittersweet: #f27263ff;
+--dark-salmon: #f89378ff;
+--light-salmon: #fca887ff;
+--macaroni-and-cheese: #fdb48cff;
+--antique-white: #ffeed6ff;
+--apricot: #fdc5acff;
+--vivid-tangerine: #fb9c82ff;
+--congo-pink: #ff958aff;
+--congo-pink-2: #f98477ff;
 */
-
-.App {
-    text-align: center;
-}
-
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
+    /* Color Palettes */
+    /* Light Mode */
+    
+    .content-wrapper.lightMode {
+        --background: #f6f6f4ff;
+        --icon: #dadad2ff;
+        --red: #EB6F78;
+        --orange: #f0803cff;
+        --menu: #97c3edff;
+        --links: #342f37ff;
+    }
+    
+    .content-wrapper.darkMode {
+        --background: #181c3aff;
+        --icon: #dadad2ff;
+        --red: #e43d56ff;
+        --orange: #f06714ff;
+        --menu: #223196;
+        --links: #00d394ff;
+    }
+    /* Google Font Imports */
+    
+    @import url('https://fonts.googleapis.com/css?family=Oleo+Script&display=swap');
+    @import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
+    .App {
+        text-align: center;
+        overflow-x: hidden;
+    }
+    
     .App-logo {
-        animation: App-logo-spin infinite 20s linear;
+        height: 40vmin;
+        pointer-events: none;
     }
-}
-
-.App-header {
-    background-color: #323031;
-    min-height: 100vh;
-    /*display: flex;*/
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: #ffc857;
-}
-
-.App-link {
-    color: #ffc857;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
+    
+    @media (prefers-reduced-motion: no-preference) {
+        .App-logo {
+            animation: App-logo-spin infinite 20s linear;
+        }
     }
-    to {
-        transform: rotate(360deg);
+    
+    .App-header {
+        background-color: var(--background);
+        min-height: 100vh;
+        /*display: flex;*/
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        font-size: calc(10px + 2vmin);
     }
-}
-
-.bg-light {
-    background-color: #db3a34!important;
-}
-
-.stream-wrapper {
-    align-content: center;
-    width: 100%;
-    height: 80vh;
-}
-
-.twitch-embed {
-    width: 100%;
-    height: 100%;
-}
-
-.content-wrapper {
-    width: 100vw;
-    height: 45vh;
-    position: absolute;
-    z-index: 3;
-}
-
-.lower-wrapper {
-    width: 100%;
-    height: 100%;
-    display: inline-flex;
-}
-
-.twitter-feed {
-    height: 90vh;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    min-width: 25vw;
-}
-
-.info {
-    text-align: start;
-    width: 100%;
-    margin-left: 1rem;
-    margin-right: 1rem;
-}
-
-.card {
-    background-color: #323031;
-}
-
-.card-header {}
-
-.btn-link {
-    background-color: #084c61;
-}
+    
+    .App-link {}
+    
+    .text {
+        color: var(--red);
+        -webkit-text-stroke-width: .001em;
+        -webkit-text-stroke-color: var(--icon);
+    }
+    
+    @keyframes App-logo-spin {
+        from {
+            transform: rotate(0deg);
+        }
+        to {
+            transform: rotate(360deg);
+        }
+    }
+    
+    .content-wrapper {
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        overflow-x: hidden;
+        background-color: var(--background);
+    }
+    
+    .logoWipe {
+        background-color: var(--background);
+        height: 100%;
+        position: fixed;
+        left: 0;
+    }
+    
+    .owlImage {
+        background-color: var(--orange);
+        position: absolute;
+        z-index: 2;
+        max-height: 30vh;
+        max-width: 30vh;
+        top: 50vh;
+        left: 50vw;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        animation: pulse-black 2s infinite;
+        /*
+        -webkit-mask-position: 0 0;
+        -webkit-mask-size: auto;
+        -webkit-mask-image: -webkit-radial-gradient(circle, black, black, black, black, black, black, black, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0), rgb(0, 0, 0, 0), rgb(0, 0, 0, 0));
+        -webkit-mask-position: 0 0;
+        -webkit-mask-size: 60vw 60vh;
+        -webkit-mask-image: -webkit-linear-gradient(135deg, rgb(0, 0, 0, 0), rgb(0, 0, 0, 0), rgb(0, 0, 0, 0), rgb(0, 0, 0, 0), black, black, black, black, black, black, black, black, black);
+        */
+    }
+    
+    @keyframes pulse-black {
+        0% {
+            transform: translate(-50%, -50%) scale(0.95);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+        }
+        70% {
+            transform: translate(-50%, -50%) scale(1);
+            box-shadow: 0 0 0 1em rgba(0, 0, 0, 0);
+        }
+        100% {
+            transform: translate(-50%, -50%) scale(0.95);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        }
+    }
+    
+    .radialMenu {
+        transition: 1s;
+        background-color: var(--menu);
+        height: 60vh;
+        width: 60vh;
+        border-radius: 50%;
+        position: absolute;
+        z-index: 1;
+        top: 50vh;
+        left: 50vw;
+        transform: translate(-50%, -50%) scale(0.01);
+    }
+    
+    .icon {
+        height: 10vh;
+        width: 10vh;
+        border-radius: 50%;
+        background-color: var(--icon);
+    }
+    
+    .lightIcon {
+        height: 5vh;
+        width: 5vh;
+        border-radius: 50%;
+        background-color: var(--icon);
+    }
+    
+    .icon:hover {
+        background-color: var(--red);
+        transform: scale(1.5);
+    }
+    
+    .lightIcon:hover {
+        background-color: var(--red);
+    }
+    
+    a {
+        display: inline-block;
+        position: absolute;
+        font-size: 15px;
+        color: var(--background);
+    }
+    
+    a:hover {
+        color: var(--orange);
+    }
+    
+    a:nth-child(1) {
+        position: absolute;
+        top: 12%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    a:nth-child(2) {
+        position: absolute;
+        top: 39%;
+        left: 86%;
+        transform: translate(-50%, -50%);
+    }
+    
+    a:nth-child(3) {
+        position: absolute;
+        top: 81%;
+        left: 74%;
+        transform: translate(-50%, -50%);
+    }
+    
+    a:nth-child(4) {
+        position: absolute;
+        top: 81%;
+        left: 26%;
+        transform: translate(-50%, -50%);
+    }
+    
+    a:nth-child(5) {
+        position: absolute;
+        top: 39%;
+        left: 14%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .nameText {
+        position: absolute;
+        top: 90vh;
+        left: 50vw;
+        font-family: 'Oleo Script';
+        font-weight: 700;
+        font-size: 10vh;
+        transform: translate(-53%, -50%);
+        text-align: center;
+        z-index: 5000;
+    }
+    
+    .bg-light {
+        background-color: var(--cultured)!important;
+    }
+    
+    .nav-link {
+        background-color: var(--mango-tango)!important;
+        color: var(--baby-blue-eyes)!important;
+    }
+    
+    .stream-wrapper {
+        align-content: center;
+        width: 100%;
+        height: 80vh;
+    }
+    
+    .twitch-embed {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .lower-wrapper {
+        width: 100%;
+        height: 100%;
+        display: inline-flex;
+        top: 100vh;
+        position: absolute;
+    }
+    
+    .about-me-wrapper,
+    .schedule-wrapper {
+        background-color: rgba(0, 0, 0, 0);
+        font-family: 'Rubik';
+        font-weight: 800;
+        font-size: 7vh;
+    }
+    
+    .twitter-feed {
+        height: 90vh;
+        padding-top: 2%;
+        padding-bottom: 2%;
+        min-width: 25vw;
+    }
+    
+    .info {
+        text-align: start;
+        width: 100vw;
+        height: 100vh;
+        position: absolute;
+        top: 100vh;
+        background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(187, 187, 187));
+    }
+    
+    .card {
+        background-color: rgba(0, 0, 0, 0);
+        border: 0px!important;
+    }
+    
+    .modeToggle {
+        position: fixed;
+        top: 2vh;
+        right: 0vh;
+        transform: translate(-100%, 0%);
+    }
+    
+    .card-header {}
+    
+    .btn-link {}
